#58 Make iTunes import confirmation usable for large playlist selections
Render the selected playlists in the iTunes import wizard's confirmation step
as a read-only TreeView that mirrors the playlist folder structure, replacing
the previous flat label list that grew unbounded and pushed the Accept/Cancel
buttons off-screen. Folder nodes show the name; leaf nodes show the name with
the track count.

A shared ItunesPlaylistCells rendering is used by both the selection step
(CheckBoxTreeCell, keeps checkboxes) and the confirmation step (read-only
TreeCell) so the two views render identically.

Extends ItunesWizardConfirmStepControllerTest with TreeView-based assertions,
including a large-selection case.